--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*
+trasparent input autofill 
+*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 999999999999999999999999999999999999999999999999999999999999s ease-in-out 0s; 
+ background-color: transparent;
+}
